--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-query": "4.14.3",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "4.6.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
@@ -20,6 +21,7 @@
     "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "5.42.0",
     "@typescript-eslint/parser": "5.42.0",
+    "autoprefixer": "10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "8.5.0",
@@ -28,7 +30,9 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-tailwindcss": "3.6.2",
+    "postcss": "8.4.18",
     "prettier": "2.7.1",
+    "tailwindcss": "3.2.2",
     "typescript": "4.8.4"
   }
 }
